--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,30 @@
 .hero {
-   padding: 3% 4%;
-   /* background-color: #26bf4f; */
- }
- 
- .hero p {
-   /* color: #4d5750; */
-   font-size: 25px;
-   display: inline;
-   padding-left: 10px;
- }
+  padding: 3% 4%;
+  /* background-color: #26bf4f; */
+}
 
- .app-title {
-   font-size: 3rem;
-   /* background-color: #ccdad1; */
-   /* color: #0c7a2a; */
-   padding: 10px;
-   display: inline-block;
-   /* border-radius: 3rem;
+.hero p {
+  /* color: #4d5750; */
+  font-size: 25px;
+  display: inline;
+  padding-left: 10px;
+}
+
+.app-title {
+  font-size: 3rem;
+  /* background-color: #ccdad1; */
+  /* color: #0c7a2a; */
+  padding: 10px;
+  display: inline-block;
+  /* border-radius: 3rem;
    box-shadow: 6px 5px; */
-   text-align: center;
- }
+  text-align: center;
+}
 
- .brand-image {
-   width: 82px;
-   height: 112px;
- }
+.brand-image {
+  width: 82px;
+  height: 112px;
+}
+ul {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
