--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
+body {
+  background-color: #00cfc9;
+  font-family: 'Della Respira';
+}
+
 .hero {
-  padding: 3% 4%;
-  /* background-color: #26bf4f; */
+  padding: 0 4%;
+  background-color: #b2f7f5;
 }
 
 .hero p {
   /* color: #4d5750; */
-  font-size: 25px;
+  font-size: 30px;
   display: inline;
-  padding-left: 10px;
+  padding-left: 50px;
 }
 
 .app-title {
@@ -25,6 +30,36 @@
   width: 82px;
   height: 112px;
 }
-ul {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+.font-title {
+  font-family: 'Syncopate';
 }
+
+.and {
+  font-family: 'Caveat';
+}
+
+.liquor-selection {
+  margin-bottom: 14px;
+  margin-top: 16px;
+  background-color: #b2f7f5;
+}
+
+.search-space {
+  height: 2.75rem;
+  width: 90%;
+  background-color: #b2f7f5;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  margin-bottom: 14px;
+  margin-top: 16px;
+  box-sizing: content-box;
+  transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
+  transition-property: box-shadow, border, -webkit-box-shadow;
+  transition-duration: 0.3s, 0.3s, 0.3s;
+  transition-timing-function: ease, ease, ease;
+  transition-delay: 0s, 0s, 0s;
+}
+::placeholder {
+  color: rgb(82, 81, 81);
+ }
