--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ body {
   height: 3rem;
   width: 90%;
   font-size: 20px;
+  color: rgb(82, 81, 81);
 }
 
 .search-space {
@@ -75,7 +76,22 @@ body {
 .toast {
   font-size: 29px;
   top: 350px !important;
+  background-color: rgb(82, 81, 81);
   /* right: 100px !important; */
 
   left: -225px !important;
+}
+
+.button_2 {
+  padding-left: 0.75rem;
+  width: 100px;
+  height: 35px;
+  background-color: rgb(82, 81, 81);
+}
+
+.button {
+  padding-left: 0.75rem;
+  width: 100px;
+  height: 35px;
+  background-color: rgb(82, 81, 81);
 }
