--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,28 @@ body {
   width: 100px;
   height: 35px;
   background-color: rgb(82, 81, 81);
+  color: #f2f2f2;
+}
+
+.btn:hover {
+  background-color: rgb(82, 81, 81);
+}
+
+.btn {
+  background-color: rgb(82, 81, 81);
+  font-size: 16px;
+  margin:10px 0;
+}
+
+.btn-large {
+  background-color: rgb(82, 81, 81);
+  height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
+  margin: 10px 0;
+}
+
+.button:focus {
+  background-color: rgb(82, 81, 81);
+  color: #f2f2f2;
 }
