--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,17 +33,29 @@ body {
   font-family: "Caveat";
 }
 
+.search-header {
+  font-size: 30px;
+}
+
 .input-field {
   margin-top: 0;
 }
 .liquor-selection {
   margin-bottom: 14px;
-  margin-top: 25px;
+  margin-top: 42px;
   background-color: rgba(255,255,255,0.9);
   height: 3rem;
   width: 90%;
   font-size: 20px;
   color: rgb(82, 81, 81);
+}
+
+.old-search {
+  margin-left: 12px;
+}
+
+.find-meal {
+  margin-left: 16px;
 }
 
 .search-space {
@@ -112,7 +124,7 @@ body {
   height: 36px;
   line-height: 36px;
   padding: 0 16px;
-  margin: 10px 0;
+  margin: 10px;
 }
 
 .button:focus {
