--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,28 @@
 body {
-  /* background-image:linear-gradient(to bottom right, #fffed6, #00cfc9); */
-  /* background-image: linear-gradient(to bottom left, #00cfc9, #fffed6); */
   background-color: #00cfc9;
   font-family: "Della Respira";
 }
 
 .hero {
   padding: 0 4%;
-  background-image: linear-gradient(to bottom right,#28e7e1, #fffed6);
-  border-bottom: solid #525353 5px;
+  background-color: #b2f7f5;
 }
 
 .hero p {
-  font-size: 40px;
+  /* color: #4d5750; */
+  font-size: 30px;
   display: inline;
   padding-left: 50px;
 }
 
 .app-title {
   font-size: 3rem;
+  /* background-color: #ccdad1; */
+  /* color: #0c7a2a; */
   padding: 10px;
   display: inline-block;
+  /* border-radius: 3rem;
+   box-shadow: 6px 5px; */
   text-align: center;
 }
 
@@ -36,46 +38,21 @@ body {
   font-family: "Caveat";
 }
 
-.search-header {
-  font-size: 30px;
-}
-
-.input-field {
-  margin-top: 0;
-  margin-bottom: 40px;
-}
 .liquor-selection {
   margin-bottom: 14px;
-  margin-top: 42px;
-  background-color: rgba(255,255,255,0.9);
-  height: 3rem;
-  width: 90%;
-  font-size: 20px;
-  color: rgb(82, 81, 81);
-}
-
-.old-search {
-  margin-left: 12px;
-}
-
-.find-meal {
-  margin-left: 16px;
-}
-
-.matchCocktailside {
-  margin-bottom: 40px;
+  margin-top: 16px;
+  background-color: #b2f7f5;
 }
 
 .search-space {
   height: 2.75rem;
   width: 90%;
-  background-color: rgba(255,255,255,0.9);
-  border: 1px solid #f2f2f2;
+  background-color: #b2f7f5;
+  border: none;
   outline: none;
-  border-radius: 2px;
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 14px;
-  margin-top: 12px;
+  margin-top: 16px;
   box-sizing: content-box;
   transition: box-shadow 0.3s, border 0.3s, -webkit-box-shadow 0.3s;
   transition-property: box-shadow, border, -webkit-box-shadow;
@@ -96,46 +73,7 @@ body {
 .toast {
   font-size: 29px;
   top: 350px !important;
-  background-color: rgb(82, 81, 81);
   /* right: 100px !important; */
 
   left: -225px !important;
-}
-
-.button_2 {
-  padding-left: 0.75rem;
-  width: 100px;
-  height: 35px;
-  background-color: rgb(82, 81, 81);
-}
-
-.button {
-  padding-left: 0.75rem;
-  width: 100px;
-  height: 35px;
-  background-color: rgb(82, 81, 81);
-  color: #f2f2f2;
-}
-
-.btn:hover {
-  background-color: rgb(82, 81, 81);
-}
-
-.btn {
-  background-color: rgb(82, 81, 81);
-  font-size: 16px;
-  margin:10px 0;
-}
-
-.btn-large {
-  background-color: rgb(82, 81, 81);
-  height: 36px;
-  line-height: 36px;
-  padding: 0 16px;
-  margin: 10px;
-}
-
-.button:focus {
-  background-color: rgb(82, 81, 81);
-  color: #f2f2f2;
 }
