--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,12 @@ body {
 ::placeholder {
   color: rgb(82, 81, 81);
 }
-#toastContainer {
+/* #toastContainer {
   top: auto !important;
   right: auto !important;
   bottom: 10%;
   left: 7%;
-}
+} */
 
 .toast {
   font-size: 29px;
@@ -101,7 +101,14 @@ body {
 
   left: -225px !important;
 }
+.toast_2 {
+  font-size: 29px;
+  top: 350px !important;
+  background-color: rgb(82, 81, 81);
+  /* right: 100px !important; */
 
+  right: -1000px !important;
+}
 .button_2 {
   padding-left: 0.75rem;
   width: 100px;
