--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
 body {
-  /* background-image:linear-gradient(to bottom right, #fffed6, #00cfc9); */
-  /* background-image: linear-gradient(to bottom left, #00cfc9, #fffed6); */
   background-color: #00cfc9;
   font-family: "Della Respira";
 }
@@ -28,6 +26,8 @@ body {
   width: 82px;
   height: 112px;
 }
+
+/* fonts for brand name */
 .font-title {
   font-family: "Syncopate";
 }
@@ -36,14 +36,18 @@ body {
   font-family: "Caveat";
 }
 
+/* cocktail search header */
 .search-header {
   font-size: 30px;
 }
 
+/* drop-down */
 .input-field {
   margin-top: 0;
   margin-bottom: 40px;
 }
+
+/* choices in drop-down to override materialize styling */
 .liquor-selection {
   margin-bottom: 14px;
   margin-top: 42px;
@@ -54,6 +58,7 @@ body {
   color: rgb(82, 81, 81);
 }
 
+/* overriding materialize styling for each section */
 .old-search {
   margin-left: 12px;
 }
@@ -66,6 +71,7 @@ body {
   margin-bottom: 40px;
 }
 
+/* override materialize styling for ingredient search */
 .search-space {
   height: 2.75rem;
   width: 90%;
@@ -83,32 +89,20 @@ body {
   transition-timing-function: ease, ease, ease;
   transition-delay: 0s, 0s, 0s;
 }
+
 ::placeholder {
   color: rgb(82, 81, 81);
 }
-/* #toastContainer {
-  top: auto !important;
-  right: auto !important;
-  bottom: 10%;
-  left: 7%;
-} */
 
+/* invalid search box */
 .toast {
   font-size: 29px;
   top: 350px !important;
   background-color: rgb(82, 81, 81);
-  /* right: 100px !important; */
-
   left: -225px !important;
 }
-.toast_2 {
-  font-size: 29px;
-  top: 350px !important;
-  background-color: rgb(82, 81, 81);
-  /* right: 100px !important; */
 
-  right: -1000px !important;
-}
+/* submit buttons */
 .button_2 {
   padding-left: 0.75rem;
   width: 100px;
@@ -128,6 +122,7 @@ body {
   background-color: rgb(82, 81, 81);
 }
 
+/* search results buttons */
 .btn {
   background-color: rgb(82, 81, 81);
   font-size: 16px;
